# avito_test

./: .gitignore  CMakeLists.txt
include/: utils.hpp
src/: main.cpp  utils.cpp
tests/: in.txt  in_big.txt
